lmce-asterisk (0+0.3.1-1) unstable; urgency=low

  * Added support for CISCO mobile iOS app softphone (see http://wiki.linuxmce.org/index.php/Cisco_Mobile)

 -- Serge Wagener <serge@linuxmce.org>  Tue, 16 Nov 2011 18:00:00 +0200

lmce-asterisk (0+0.3.0-4) unstable; urgency=low

  * Add dependency to asterisk-voicemail
  * Some table structure modifications

 -- Serge Wagener <serge@linuxmce.org>  Tue, 14 Nov 2011 20:00:00 +0200

lmce-asterisk (0+0.3.0-3) unstable; urgency=low

  * Fixed a bug in db creation sql file

 -- Serge Wagener <serge@linuxmce.org>  Tue, 8 Nov 2011 07:15:00 +0200

lmce-asterisk (0+0.3.0-2) unstable; urgency=low

  * Fixed a lot of small bugs

 -- Serge Wagener <serge@linuxmce.org>  Tue, 1 Nov 2011 08:00:00 +0200

lmce-asterisk (0+0.3.0-1) unstable; urgency=low

  * Making package asterisk-1.8 compatible.

 -- Serge Wagener <serge@linuxmce.org>  Tue, 25 Oct 2011 14:00:00 +0200

lmce-asterisk (0+0.2.0-8) unstable; urgency=low

  * Making 'hints' work using conf files. Not yet supported in realtime by asterisk.

 -- Serge Wagener <serge@linuxmce.org>  Sun, 23 Oct 2011 19:30:00 +0200

lmce-asterisk (0+0.2.0-7) unstable; urgency=low

  * Modifying trunk SIP entry for incoming calls to work

 -- Serge Wagener <serge@linuxmce.org>  Sat, 22 Oct 2011 14:30:00 +0200

lmce-asterisk (0+0.2.0-6) unstable; urgency=low

  * Adds dependency for asterisk-mysql package

 -- Serge Wagener <serge@linuxmce.org>  Fri, 14 Oct 2011 17:00:00 +0200

lmce-asterisk (0+0.2.0-5) unstable; urgency=low

  * Replaced some GoTo in diaplan with new syntax, speed up parsing

 -- Serge Wagener <serge@linuxmce.org>  Tue, 12 Oct 2011 15:45:00 +0200

lmce-asterisk (0+0.2.0-4) unstable; urgency=low

  * Replaced MeetMe with ConfBridge as that does not need dahdi (zaptel) modules

 -- Serge Wagener <serge@linuxmce.org>  Tue, 11 Oct 2011 15:30:00 +0200

lmce-asterisk (0+0.2.0-3) unstable; urgency=low

  * Adding files from obsolete asterisk-pluto package to this package
